# gazebo_logger

./: CMakeLists.txt  README.md  package.xml
src/: gazebo_logger_plugin.cpp
